@@ -184,8 +184,8 @@ static void vo_hidecursor(Display * disp, Window win)
     Colormap colormap;
     static char bm_no_data[] = { 0, 0, 0, 0, 0, 0, 0, 0 };
 
-    if (WinID == 0)
-        return;                 // do not hide if playing on the root window
+    if (WinID >= 0)
+        return;        // do not hide if attached to an existing window
 
     colormap = DefaultColormap(disp, DefaultScreen(disp));
     if ( !XAllocNamedColor(disp, colormap, "black", &black, &dummy) )
@@ -203,8 +203,8 @@ static void vo_hidecursor(Display * disp, Window win)
 
 static void vo_showcursor(Display * disp, Window win)
 {
-    if (WinID == 0)
-        return;
+    if (WinID >= 0)
+        return;        // do not show if attached to an existing window
     XDefineCursor(disp, win, 0);
 }
 
